--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,4 @@
+TODO
+-MAKE A TESTING SCRIPT FOR THE USER ALERT SETTINGS
 -IMPLEMENT DASHBOARD ROUTES CHANGE TO THE UPDATED ROUTES ENDPOINT
 -MAKE SURE ALL ENDPOINT FROM OTHER SERVICES VALID
